--- a/frontend/src/styling/NewPlayer.scss
+++ b/frontend/src/styling/NewPlayer.scss
@@ -1,4 +1,24 @@
 .new-player-container {
   border-style: solid;
   border-color: black;
+  border-radius: 2em;
+  display: block;
+  height: 15em;
+  width: 30%;
+  padding: 1em;
+  margin: 0 auto;
+  margin-top: 5%;
+  background-color: white;
+}
+
+.line-container {
+  margin-bottom: 1.5em;
+}
+
+.new-player-username,
+.new-player-password {
+  float: right;
+  width: 55%;
+  margin-right: 2em;
+  height: 1.5em;
 }
