--- a/frontend/src/styling/CurrentPlayers.scss
+++ b/frontend/src/styling/CurrentPlayers.scss
@@ -12,6 +12,7 @@
   padding-left: 1.4em;
   padding-top: 0.9em;
   border-radius: 0.5em;
+  transition: transform 0.3s ease;
   
   &:hover {
     cursor: pointer;
@@ -19,5 +20,24 @@
 
   &.selected {
     background-color: green !important;
+  }
+}
+
+.individual-current-player-container {
+  
+}
+
+.turn-indicator-arrow {
+  font-size: 1.5em;
+  margin-left: 0.9em;
+  transition: margin-top 0.3s ease;
+}
+
+@keyframes moveArrow {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(-1em);
   }
 }
