selected letter added to application state

--- a/frontend/src/styling/Letter.scss
+++ b/frontend/src/styling/Letter.scss
@@ -8,6 +8,10 @@
   height: 2.5em;
   width: 2.5em;
   background-color: #FFF9DB;
+  &:hover {
+    cursor: pointer;
+    background-color: rgb(38, 187, 38);
+  }
 }
 
 .letter-character {
