--- a/frontend/src/styling/LetterCollection.scss
+++ b/frontend/src/styling/LetterCollection.scss
@@ -1,3 +1,8 @@
+.player-letters-area-container {
+  top: 50%;
+  margin-top: -40em;
+}
+
 .individual-player-letters-container {
   display: flex;
 }
