bug fixes and some more refactoring

--- a/frontend/src/styling/Letter.scss
+++ b/frontend/src/styling/Letter.scss
@@ -12,6 +12,12 @@
     cursor: pointer;
     background-color: rgb(38, 187, 38);
   }
+  &.bad-selection {
+    background-color: red !important;
+  }
+  &.selected {
+    background-color: green;
+  }
 }
 
 .letter-character {
