refactored for better way of re filling letters

--- a/frontend/src/styling/Square.scss
+++ b/frontend/src/styling/Square.scss
@@ -49,5 +49,5 @@
 .middle-square {
   @extend .square;
   @include selected-letter;
-  background-color: black;
+  background-color: rgb(193, 31, 31);
 }
