--- a/frontend/src/styling/ErrorWarning.scss
+++ b/frontend/src/styling/ErrorWarning.scss
@@ -2,9 +2,12 @@
   height: 20%;
   width: 30%;
   border-style: solid;
-  border-color: black;
-  border-width: 0.14em;
+  border-color: rgb(200, 39, 39);
+  border-width: 0.4em;
+  border-radius: 1em;
   position: absolute;
-  right: 50%;
+  top: 49%;
   left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: white;
 }
