new component styling

--- a/frontend/src/styling/ErrorWarning.scss
+++ b/frontend/src/styling/ErrorWarning.scss
@@ -11,3 +11,14 @@
   transform: translate(-50%, -50%);
   background-color: white;
 }
+
+.error-button {
+  
+}
+
+.error-text {
+  margin-top: 5em;
+  margin-left: 2em;
+  margin-right: 2em;
+  font-weight: bold;
+}
