--- a/frontend/src/styling/Players.scss
+++ b/frontend/src/styling/Players.scss
@@ -1,17 +1,48 @@
-.players-icons-container {
-  margin-top: 1em;
+.players-page-container {
   display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1em;
+}
+
+.show-leaderboard-button {
+  background-color: #3498db;
+  color: white;
+  padding: 0.625rem 1.25rem;
+  border: none;
+  border-radius: 0.3125rem;
+  font-size: 1rem;
+  cursor: pointer;
+  margin-bottom: 1em;
+
+  &:hover {
+    background-color: #2980b9;
+  }
+}
+
+.players-icons-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.player-icon-container {
+  position: relative;
+  margin: 0.625rem;
 }
 
 .player-icon {
   background-color: red;
-  margin-left: 0.5em;
-  padding: 0.2em;
-  border-radius: 0.2em;
-  
-  &:hover {
-    cursor: pointer;
-  }
+  width: 3.125rem;
+  height: 3.125rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+  color: white;
+  border-radius: 50%;
+  cursor: pointer;
 
   &.selected {
     background-color: green !important;
@@ -22,13 +53,13 @@
   display: none;
   position: absolute;
   background-color: white;
-  border: 1px solid #ccc;
-  border-radius: 5px;
-  padding: 10px;
+  border: 0.0625rem solid #ccc;
+  border-radius: 0.3125rem;
+  padding: 0.625rem;
   z-index: 1;
-  left: 1.7%;
-  top: 13%;
-  transform: translate(-50%, 10px);
+  left: 50%;
+  top: 100%;
+  transform: translate(-50%, 0.625rem);
 }
 
 .player-icon:hover .popup {
