--- a/frontend/src/styling/Landing.scss
+++ b/frontend/src/styling/Landing.scss
@@ -1,8 +1,48 @@
 body.landing-container-gray {
-  background-color: gray;
+  background-color: #dcdcdc;
+}
+
+.landing-page-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 2em 0;
+}
+
+.landing-welcome {
+  font-size: 2.5em;
+  margin-bottom: 1em;
+  color: #333;
+}
+
+.buttons-container {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 4em;
+}
+
+.new-player-button,
+.start-game-button {
+  font-size: 1.2em;
+  padding: 0.5em 1em;
+  margin: 0 0.5em;
+  border-radius: 0.3em;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  cursor: pointer;
+  width: 14em;
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: #3f8f42;
+  }
 }
 
 .start-game-button {
-  margin-top: 5em;
-  margin-left: 1em;
+  display: none;
+}
+
+.buttons-container .start-game-button {
+  display: block;
 }
