--- a/frontend/src/styling/NewPlayer.scss
+++ b/frontend/src/styling/NewPlayer.scss
@@ -1,24 +1,77 @@
 .new-player-container {
-  border-style: solid;
-  border-color: black;
-  border-radius: 2em;
+  border: 1px solid #333;
+  border-radius: 1em;
   display: block;
-  height: 15em;
-  width: 30%;
-  padding: 1em;
+  padding: 1.5em;
   margin: 0 auto;
   margin-top: 5%;
   background-color: white;
+  width: 45%;
 }
 
 .line-container {
   margin-bottom: 1.5em;
+  display: flex;
+  justify-content: space-between;
+}
+
+.new-player-title {
+  font-size: 1.8em;
+  color: #333;
+  margin-bottom: 1em;
+}
+
+.new-player-label {
+  font-size: 1.2em;
+  color: #333;
 }
 
 .new-player-username,
 .new-player-password {
-  float: right;
+  padding: 0.3em;
+  font-size: 1.1em;
+  border: 1px solid #ccc;
+  border-radius: 0.3em;
   width: 55%;
-  margin-right: 2em;
-  height: 1.5em;
 }
+
+.add-player-button {
+  font-size: 1.2em;
+  padding: 0.5em 1em;
+  border-radius: 0.3em;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  cursor: pointer;
+  transition: background-color 0.3s;
+
+  &:hover {
+    background-color: #3f8f42;
+  }
+}
+
+.non-matching-passwords-prompt {
+  color: white;
+  padding: 0.4em;
+  font-size: 1.2em;
+  margin-top: 0.5em;
+  background-color: rgb(192, 64, 64);
+  border-radius: 0.5em;
+}
+
+.close-not-matching-passwords-button {
+  float: right;
+  border: none;
+  background-color: transparent;
+  color: #333;
+  font-weight: bold;
+  font-size: 1.2rem;
+  background-color: white;
+  border-radius: 1em;
+  cursor: pointer;
+
+  &:hover {
+    color: #f00;
+  }
+}
+
