--- a/frontend/src/styling/GamePage.scss
+++ b/frontend/src/styling/GamePage.scss
@@ -2,6 +2,28 @@
   
 }
 
+.game-page-greeting {
+  margin-left: 0.4em;
+}
+
+.next-turn-button {
+  font-size: 1.2em;
+  padding: 0.5em 1em;
+  margin: 0 0.5em;
+  border-radius: 0.3em;
+  background-color: #4caf50;
+  color: white;
+  border: none;
+  cursor: pointer;
+  width: 14em;
+  transition: background-color 0.3s, box-shadow 0.3s;
+
+  &:hover {
+    background-color: #3f8f42;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.3);
+  }
+}
+
 .error-warning-component-container {
   display: inline-block;
 }
