--- a/frontend/src/styling/ScoreBoard.scss
+++ b/frontend/src/styling/ScoreBoard.scss
@@ -1,14 +1,38 @@
 .score-board-container {
   position: absolute;
   right: 0;
-  border-style: solid;
-  border-color: black;
-  border-width: 0.14em;
   display: flex;
   margin-right: 8em;
+  background-color: #f5f5f5;
+  border-radius: 0.5em;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  padding: 1em;
 }
 
 .individual-player-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   margin-right: 1em;
   margin-left: 1em;
+  padding: 0.5em;
+  border: 1px solid #ccc;
+  border-radius: 0.5em;
+  background-color: #fff;
+
+  &.selected {
+    background-color: gold;
+  }
+}
+
+.score-board-username {
+  font-weight: bold;
+  font-size: 1.2em;
+  margin-bottom: 0.5em;
+  color: #222;
+}
+
+.score-board-current-score {
+  font-size: 1em;
+  color: #333;
 }
