--- a/frontend/src/styling/Square.scss
+++ b/frontend/src/styling/Square.scss
@@ -51,3 +51,31 @@
   @include selected-letter;
   background-color: rgb(193, 31, 31);
 }
+
+.played-letter-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%; 
+  width: 100%;
+  position: relative;
+}
+
+.square-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.square-letter-character {
+  margin-right: 0.8em;
+  font-size: 1.6em;
+  font-weight: bold;
+}
+
+.square-letter-value {
+  margin-right: 0.2em;
+  margin-bottom: 0.4em;
+  font-size: 0.8em;
+  float: right;
+}
