--- a/frontend/src/styling/ErrorWarning.scss
+++ b/frontend/src/styling/ErrorWarning.scss
@@ -12,13 +12,10 @@
   background-color: white;
 }
 
-.error-button {
-  
-}
-
 .error-text {
-  margin-top: 5em;
+  margin-top: 3em;
   margin-left: 2em;
   margin-right: 2em;
+  font-size: 1.5em;
   font-weight: bold;
 }
